# glancer

./: .gitattributes  .gitignore  LICENSE  README.md  glancer.cabal  stack.yaml
src/: Captions.hs  Html.hs  Main.hs  Parser.hs  Process.hs
test/: Spec.hs
